--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Pixel Art Maker!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -10,9 +11,9 @@
 
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
-        Grid Height:
+        <span>Grid Height:</span>
         <input type="number" id="inputHeight" name="height" min="1" value="1">
-        Grid Width:
+        <span>Grid Width:</span>
         <input type="number" id="inputWeight" name="width" min="1" value="1">
         <input type="submit">
     </form>
